--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -42,42 +42,6 @@
   p,li,a {
     font-size: 16px;
   }
-  pre {
-    position: relative;
-    border-radius: 4px;
-    &:hover .copy-code-btn {
-      display: block;
-    }
-    .line-box {
-      width: 40px;
-      position: absolute;
-      top: 0;
-      left: 0;
-      padding-top: 12px;
-      div {
-        line-height: 24px;
-        height: 24px;
-        padding-right: 9px;
-        font-size: 15px;
-        -moz-user-select: none;
-        -webkit-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-    }
-  }
-  pre > code {
-    font-size: 16px;
-    white-space: pre;
-    word-wrap: normal;
-    &::-webkit-scrollbar {
-      height: 12px;
-      background: #F1F1F1;
-    }
-    &::-webkit-scrollbar-thumb {
-      background: #A8A8A8;
-    }
-  }
   h1,h2,h3,h4,h5,h6 {
     font-weight: 700;
     code {
@@ -188,19 +152,58 @@
   }
   @import "sunburst.min";
 }
-// 包含行号的样式
-.post-content[data-code-line-num="show"] {
+// 通用的代码高亮样式
+.enable-highlight {
   pre {
-    code {
-      padding: 12px 10px;
+    position: relative;
+    border-radius: 4px;
+    &:hover .copy-code-btn {
+      display: block;
+    }
+    .line-box {
+      width: 40px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding-top: 12px;
+      div {
+        line-height: 24px;
+        height: 24px;
+        padding-right: 9px;
+        font-size: 15px;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
     }
   }
-}
-// 不包含行号的样式
-.post-content[data-code-line-num="hide"] {
-  pre {
-    code {
-      padding: 12px 16px;
+  pre > code {
+    font-size: 16px;
+    white-space: pre;
+    word-wrap: normal;
+    &::-webkit-scrollbar {
+      height: 12px;
+      background: #F1F1F1;
+    }
+    &::-webkit-scrollbar-thumb {
+      background: #A8A8A8;
+    }
+  }
+  // 包含行号的样式
+  .post-content[data-code-line-num="show"] {
+    pre {
+      code {
+        padding: 12px 10px;
+      }
+    }
+  }
+  // 不包含行号的样式
+  .post-content[data-code-line-num="hide"] {
+    pre {
+      code {
+        padding: 12px 16px;
+      }
     }
   }
 }
