加入了小屏移动设备专用的章节目录
1. post.php 加入了移动设备专用的目录
2. style.scss、dark-color.scss、light-color.scss 加入了移动设备目录的样式
3. app.js 加入了移动设备目录的开关交互操作
4. fonts 目录和 icon.css 新增一个目录图标
5. functions.php 加入了移动设备目录的开关设置
6. options-panel.js 调整了主题设置分组标题的插入位置
7. README.md 更新了主题打赏表格

--- a/assets/css/dark-color.scss
+++ b/assets/css/dark-color.scss
@@ -286,11 +286,11 @@ $dark-text-color2: #999999;
     }
   }
 
-  // 返回顶部按钮配色
-  #to-top-btn {
+  // 返回顶部按钮和移动设备的目录按钮配色
+  #to-top-btn,#directory-btn {
     background-color: #212529;
     color: #FFFFFF !important;
-    border: none;
+    border: none !important;
   }
 
   // 侧边栏配色
@@ -327,12 +327,16 @@ $dark-text-color2: #999999;
     }
   }
 
-  // 章节目录配色
-  #directory-box {
-    background: #16161A !important;
-
-    .directory-num {
-      color: $dark-text-color !important;
+  // 移动设备目录配色
+  #directory-mobile {
+    background: #16161A;
+    .title-bar {
+      h5,button {
+        color: $dark-text-color;
+      }
+    }
+    a {
+      color: $dark-link-color;
     }
   }
 
