--- a/assets/css/icon.css
+++ b/assets/css/icon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?qfbbpl');
-  src:  url('../fonts/icomoon.eot?qfbbpl#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?qfbbpl') format('truetype'),
-    url('../fonts/icomoon.woff?qfbbpl') format('woff'),
-    url('../fonts/icomoon.svg?qfbbpl#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?8q7dem');
+  src:  url('../fonts/icomoon.eot?8q7dem#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?8q7dem') format('truetype'),
+    url('../fonts/icomoon.woff?8q7dem') format('woff'),
+    url('../fonts/icomoon.svg?8q7dem#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,20 +25,23 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-qzone-logo:before {
-  content: "\e900";
+.icon-list-ol:before {
+  content: "\e904";
 }
 .icon-award:before {
+  content: "\e906";
+}
+.icon-chevron-right:before {
+  content: "\e900";
+}
+.icon-chevron-left:before {
   content: "\e901";
 }
 .icon-thumbs-up:before {
   content: "\e902";
 }
-.icon-chevron-left:before {
+.icon-qzone-logo:before {
   content: "\e903";
-}
-.icon-chevron-right:before {
-  content: "\e904";
 }
 .icon-pencil:before {
   content: "\e905";
