--- a/assets/css/light-color.scss
+++ b/assets/css/light-color.scss
@@ -160,8 +160,8 @@
     border-color: #f4dcc0;
   }
 
-  // 返回顶部按钮配色
-  #to-top-btn {
+  // 返回顶部按钮和移动设备目录按钮配色
+  #to-top-btn,#directory-btn {
     background-color: #FFFFFF;
     border: 1px solid #CCCCCC;
   }
@@ -179,13 +179,9 @@
     }
   }
 
-  // 章节目录配色
-  #directory-box {
-    background: #F8F9FA;
-
-    .directory-num {
-      color: #212529;
-    }
+  // 移动设备的目录配色
+  #directory-mobile {
+    background: #FFFFFF;
   }
 
   // 文章页
