--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -499,6 +499,60 @@ header {
   display: none;
 }
 
+// 移动设备目录按钮开关
+#directory-btn {
+  position: fixed;
+  right: 20px;
+  bottom: 80px;
+  font-size: 16px;
+  opacity: 0.7;
+  width: 40px;
+  height: 40px;
+}
+// 移动设备专用的目录
+#directory-mobile {
+  width: 0;
+  position: fixed;
+  right: 60px;
+  bottom: 80px;
+  flex-direction: column;
+  display: flex;
+  max-height: 70%;
+  width: 300px;
+  opacity: 0;
+  // 目录列表区域
+  .directory-list {
+    height: 100%;
+    overflow-y: auto;
+    ul {
+      list-style: none;
+      padding-left: 0;
+      ul {
+        padding-left: 15px;
+      }
+    }
+    a {
+      font-size: 14px;
+    }
+  }
+  // 目录的标题栏区域
+  .title-bar {
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 10px;
+    i {
+      font-size: 15px;
+    }
+  }
+}
+@media screen and (max-height: 450px) {
+  #directory-mobile {
+    max-height: 60%;
+  }
+}
+
 // 图片灯箱
 #max-img-box {
   display: none;
