修复了文章设置密码后在有的运行环境会出现密码错误的问题
1. app.js 去除了文章密码的元素替换，只添加样式和说明
2. style.scss 给文章密码输入区域添加了居中样式

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -608,6 +608,9 @@ header input[type=search]:focus {
 .post-page #qr-link .link-box a:hover {
   text-decoration: none;
 }
+.post-page .protected {
+  text-align: center;
+}
 
 #agree-p {
   font-weight: 700;
