侧边栏加入了自定义 HTML 内容组件
1. functions.php 加入了侧边栏自定义 HTML 组件的标题和内容设置
2. assets/js/options-panel.js 调整了后台主题设置分组标题的插入位置
3. components/sidebar.php 侧边栏加入了自定义 HTML 内容组件
4. assets/css/style.scss 加入了侧边栏自定义 HTML 组件的基本样式
5. assets/css/dark-color.scss 加入了侧边栏自定义 HTML 组件的深色配色

--- a/assets/css/dark-color.scss
+++ b/assets/css/dark-color.scss
@@ -325,6 +325,13 @@ $dark-text-color2: #999999;
         background: #CCCCCC;
       }
     }
+    // 自定义HTML
+    .customize-html {
+      color: $dark-text-color;
+      a {
+        color: $dark-link-color;
+      }
+    }
   }
 
   // 移动设备目录配色
