修复了列表内插入多行代码块时无法正常显示高亮样式的问题
1. assets/css/light-color.scss 修复了浅色模式下列表内插入多行代码块时无法正常显示高亮样式的问题
2. assets/css/dark-color.scss 修复了深色模式下列表内插入多行代码块时无法正常显示高亮样式的问题

--- a/assets/css/dark-color.scss
+++ b/assets/css/dark-color.scss
@@ -63,8 +63,7 @@ $dark-text-color2: #999999;
   ol, ul {
     li {
       color: $dark-text-color;
-
-      code {
+      > code {
         @include codeColor;
       }
     }
