--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -554,48 +554,53 @@ header {
 // 图片灯箱
 #max-img-box {
   display: none;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 1200;
-}
-// 图片灯箱功能按钮区
-.max-img-features-btn {
-  position: fixed;
-  top: 10px;
-  right: 10px;
-  z-index: 1203;
-  display: none;
-  button {
-    color: #FFFFFF;
-    text-shadow: 0 1px #333333, 1px 0 #333333, -1px 0 #333333, 0 -1px #333333;
-    font-size: 15px;
-    &:hover {
-      color: #F7E6D2;
+  // 遮罩层
+  #max-img-bg {
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 1200;
+  }
+  // 图片灯箱功能按钮区
+  .max-img-features-btn {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: 1203;
+    display: none;
+    button {
+      color: #FFFFFF;
+      text-shadow: 0 1px #333333, 1px 0 #333333, -1px 0 #333333, 0 -1px #333333;
+      font-size: 15px;
+      &:hover {
+        color: #F7E6D2;
+      }
     }
   }
+  // 图片描述
+  #img-info {
+    position: fixed;
+    bottom: 30px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    font-size: 16px;
+    text-shadow: 0 1px #333333, 1px 0 #333333, -1px 0 #333333, 0 -1px #333333;
+    z-index: 1203;
+    display: none;
+  }
+  // 图片
+  #max-img {
+    position: absolute;
+    cursor: move;
+    display: none;
+    z-index: 1201;
+  }
 }
-// 图片描述
-#img-info {
-  position: fixed;
-  bottom: 30px;
-  left: 50%;
-  transform: translate(-50%, 0);
-  font-size: 16px;
-  text-shadow: 0 1px #333333, 1px 0 #333333, -1px 0 #333333, 0 -1px #333333;
-  z-index: 1203;
-  display: none;
-}
-// 图片
-#max-img {
-  position: absolute;
-  cursor: move;
-  display: none;
-  z-index: 1201;
-}
+
 // 禁止滚动
 .stop-scrolling {
   height: 100%;
