文章列表加入了全文显示
1. functions.php 加入了文章列表的全文显示设置
2. functions.php 加入了文章列表显示判断函数
3. components/post-list.php 加入了文章列表的全文显示
4. assets/css/style.scss 加入了文章列表全文显示区域的文章内容样式
5. assets/css/dark-color.scss 加入了文章列表全文显示区域的深色文章内容样式
6. assets/js/app.js 加入了图片灯箱的 HTML 模板
7. assets/js/options-panel.js 调整了后台主题设置分组标题的插入位置
8. post.php 取消了引入图片灯箱的 PHP 模板
9. page.php取消了引入图片灯箱的 PHP 模板

--- a/assets/css/dark-color.scss
+++ b/assets/css/dark-color.scss
@@ -263,6 +263,11 @@ $dark-text-color2: #999999;
     @include btn-primary;
   }
 
+  // 文章列表的全文显示配色
+  .fullText {
+    @include dark-post-content-color;
+  }
+
   // 文章有效期提醒信息配色
   .expiration-reminder {
     background: #16161A;
