--- a/assets/css/icon.css
+++ b/assets/css/icon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?8q7dem');
-  src:  url('../fonts/icomoon.eot?8q7dem#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?8q7dem') format('truetype'),
-    url('../fonts/icomoon.woff?8q7dem') format('woff'),
-    url('../fonts/icomoon.svg?8q7dem#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?88n8ra');
+  src:  url('../fonts/icomoon.eot?88n8ra#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?88n8ra') format('truetype'),
+    url('../fonts/icomoon.woff?88n8ra') format('woff'),
+    url('../fonts/icomoon.svg?88n8ra#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,26 +25,29 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-list-ol:before {
-  content: "\e904";
-}
-.icon-award:before {
-  content: "\e906";
-}
-.icon-chevron-right:before {
+.icon-qzone-logo:before {
   content: "\e900";
 }
-.icon-chevron-left:before {
+.icon-thumbs-up:before {
   content: "\e901";
 }
-.icon-thumbs-up:before {
+.icon-award:before {
   content: "\e902";
 }
-.icon-qzone-logo:before {
+.icon-list-ol:before {
   content: "\e903";
 }
-.icon-pencil:before {
+.icon-coffee:before {
+  content: "\e904";
+}
+.icon-chevron-right:before {
   content: "\e905";
+}
+.icon-chevron-left:before {
+  content: "\e906";
+}
+.icon-pencil:before {
+  content: "\e907";
 }
 .icon-copy:before {
   content: "\e92c";
