--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -107,6 +107,15 @@
       min-width: 90px;
     }
   }
+  .table-responsive {
+    margin-bottom: 20px;
+    table {
+      margin-bottom: 0;
+    }
+  }
+  pre {
+    margin-bottom: 20px;
+  }
 }
 
 // 代码高亮样式
@@ -217,6 +226,21 @@
 header {
   input[type="search"]:focus {
     box-shadow: none;
+  }
+}
+
+// pjax的进度条
+#progress-bar {
+  width: 100%;
+  height: 3px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #E0E0E0;
+  z-index: 2000;
+  #progress {
+    height: 100%;
+    width: 0;
   }
 }
 
