加入了 Gravatar 源设置
1. functions.php 加入了 Gravatar 源设置
2. functions.php 加入了一个函数用来设置 Gravatar 头像
3. assets/js/options-panel.js 调整了主题设置页插入分组标题的位置
4. components/comments.php 调整了 Gravatar 头像的加载方式
5. components/sidebar.php 调整了侧边栏评论 Gravatar 头像的加载方式
6. assets/css/style.scss 给文章内插入的 video 标签加入了默认样式

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,6 +473,9 @@ header input[type=search]:focus {
 .post-list .fullText pre {
   margin-bottom: 20px;
 }
+.post-list .fullText video {
+  width: 100%;
+}
 
 #to-top-btn {
   position: fixed;
@@ -676,6 +679,9 @@ header input[type=search]:focus {
 }
 .post-page article .post-content pre {
   margin-bottom: 20px;
+}
+.post-page article .post-content video {
+  width: 100%;
 }
 .post-page article .post-content .load-img {
   width: 100%;
@@ -1026,6 +1032,9 @@ header input[type=search]:focus {
 }
 #comments .comments-lists .comment-content pre {
   margin-bottom: 20px;
+}
+#comments .comments-lists .comment-content video {
+  width: 100%;
 }
 #comments .comments-lists .comment-content p {
   margin-top: 0;
