修改了代码块获取行数的方式，修复了评论区代码块行号显示错误的问题。
1. assets/css/style.scss 调整了代码块的间距和字体大小
2. assets/js/app.js 调整了计算代码行数的方式，从计算高度改为计算换行符
3. components/header.php 调整了输出 body 的 class 的方式
4. post.php 移除了用于输出代码块设置的自定义属性

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,7 +278,7 @@
   user-select: none;
 }
 .enable-highlight pre > code {
-  font-size: 16px;
+  font-size: 16px !important;
   white-space: pre;
   word-wrap: normal;
 }
@@ -289,11 +289,13 @@
 .enable-highlight pre > code::-webkit-scrollbar-thumb {
   background: #A8A8A8;
 }
-.enable-highlight .post-content[data-code-line-num=show] pre code {
-  padding: 12px 10px;
+
+.line-num-show pre code {
+  padding: 12px 10px 12px 54px !important;
 }
-.enable-highlight .post-content[data-code-line-num=hide] pre code {
-  padding: 12px 16px;
+
+.line-num-hide pre code {
+  padding: 12px 16px !important;
 }
 
 * {
