--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -121,6 +121,7 @@
   }
 }
 
+
 // 代码高亮样式
 // stackoverflow-light 样式
 .stackoverflow-light {
@@ -191,7 +192,7 @@
     }
   }
   pre > code {
-    font-size: 16px;
+    font-size: 16px !important;
     white-space: pre;
     word-wrap: normal;
     &::-webkit-scrollbar {
@@ -202,23 +203,24 @@
       background: #A8A8A8;
     }
   }
-  // 包含行号的样式
-  .post-content[data-code-line-num="show"] {
-    pre {
-      code {
-        padding: 12px 10px;
-      }
-    }
-  }
-  // 不包含行号的样式
-  .post-content[data-code-line-num="hide"] {
-    pre {
-      code {
-        padding: 12px 16px;
-      }
+}
+// 包含行号的样式
+.line-num-show {
+  pre {
+    code {
+      padding: 12px 10px 12px 54px !important;
     }
   }
 }
+// 不包含行号的样式
+.line-num-hide {
+  pre {
+    code {
+      padding: 12px 16px !important;
+    }
+  }
+}
+
 
 
 * {
