修复了没有任何文章和页面的情况下数据库初始化出错的问题和其它一些显示和数据统计出错的问题
1. 更改了查询字段的 SQL，修复了没有任何文章和页面的情况下数据库初始化出错的问题
2. 修复了没有任何文章的情况下归档页面显示出错的问题
3. 修复了没有任何文章的情况下侧边栏博客信息阅读量不显示的问题
4. 侧边栏的最新文章、最新回复、分类、标签、归档 在没有数据的情况下加入了文字提示
5. 首页的文章列表在没有任何文章的情况下加入了文字提示

--- a/assets/css/dark-color.scss
+++ b/assets/css/dark-color.scss
@@ -310,6 +310,9 @@ $dark-text-color2: #999999;
       li a {
         color: $dark-text-color;
       }
+      .message {
+        color: $dark-text-color;
+      }
     }
     // 切换配色模式区域
     .change-color label {
