加入了多语言支持和英文
1. functions.php 中的函数拆分为多个文件放到 inc 目录
2. languages 目录 加入了 en.php 和 zh.php 英文和中文的语言翻译文件
3. inc/helpers.php 加入了几个语言设置和日期时间格式化的函数
4. 其它页面和组件中固定输出的 HTML 内容改为调用全局语言翻译数组输出
5. 后台主题设置加入了默认语言设置
6. 修复了在输入框按左右方向键会触发快捷键翻页的问题

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -566,6 +566,9 @@ header input[type=search]:focus {
 .sidebar .customize-html img {
   max-width: 100%;
 }
+.sidebar .archive ul li {
+  width: 120px;
+}
 
 .archive-title h1 {
   font-size: 16px;
