--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -431,6 +431,14 @@ header {
       max-width: 100%;
     }
   }
+  // 归档
+  .archive {
+    ul {
+      li {
+        width: 120px;
+      }
+    }
+  }
 }
 
 // 分类页的页头区域
